[project]
name = "bit-to-bit-goit-pythonweb-hw-08"
version = "0.1.0"
description = "Python FastAPI"
authors = [
    {name = "bit-to-bit",email = "vasiliy.pykhteev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "phonenumbers (>=9.0.8,<10.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
